# zillow

./: .env.example  .gitignore  README.md  dev.py  main.py  pyproject.toml
.github/workflows/: run.yml
.state/local/: home_value_index.json  inventory.json  list_price.json  rent_index.json  sales_count.json
assets/home_value_index/: home_value_index.py
assets/inventory/: inventory.py
assets/list_price/: list_price.py
assets/rent_index/: rent_index.py
assets/sales_count/: sales_count.py
src/: main.py
src/ingest/: zillow_data.py
src/subsets_utils/: __init__.py  debug.py  environment.py  http_client.py  io.py  publish.py  r2.py  runner.py
src/transforms/: common.py
src/transforms/home_value/: main.py  test.py
src/transforms/inventory/: main.py  test.py
src/transforms/rent/: main.py  test.py
src/transforms/sales/: main.py  test.py
utils/: __init__.py  debug.py  environment.py  http_client.py  io.py  publish.py  testing.py
